fixup some code